tests/error/misc_errors/result_tag_too_big.err
Error: Tag too long (at $FILE:8:11)
  | 
6 | @compile_guppy
7 | def foo(y: bool) -> None:
8 |     result(comptime("a" * (TAG_MAX_LEN + 1)), y)
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Result tag is too long

Note: Result tags are limited to 200 bytes

Guppy compilation failed due to 1 previous error
